--- a/notesPersonal/Scratch Work.ipynb
+++ b/notesPersonal/Scratch Work.ipynb
@@ -953,7 +953,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.13 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -967,7 +967,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c2154bec843a099fe3d016b95ea2c28c2b633210b993f378182a012db661fcc2"
+   }
   }
  },
  "nbformat": 4,
